prima linea nav inizio

--- a/index.html
+++ b/index.html
@@ -3,9 +3,40 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
-    <title></title>
+    <title>Hubspot</title>
   </head>
   <body>
+    <!--header -->
+    <header class="container">
+      <section class=" head fixed">
+        <nav class=list-top>
+         <ul>
+           <li><a href="#">link</a></li>
+           <li><a href="#">link</a></li>
+         </ul>
+        </nav>
+        <nav class=list-bottom>
+          <ul>
+            <li><a href="#">link</a></li>
+            <li><a href="#">link</a></li>
+            <li><a href="#">link</a></li>
+          </ul>
+        </nav>
+      </section>
+      <!-- primo menù -->
+
+    </header>
+    <!-- /header -->
+
+    <!-- corpo centrale -->
+    <main>
+
+    </main>
+    <!-- /corpo centrale  -->
+
+    <!-- footer -->
+    <footer></footer>
+    <!-- /footer -->
 
   </body>
 </html>
