google font e bottoni

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Hubspot</title>
   </head>
@@ -9,17 +10,18 @@
     <!--header -->
     <header class="container">
       <section class=" head fixed">
+
         <nav class=list-top>
          <ul>
-           <li><a href="#">link</a></li>
-           <li><a href="#">link</a></li>
+           <li><a href="#">english</a></li>
+           <li><a href="#">contact us</a></li>
          </ul>
         </nav>
         <nav class=list-bottom>
           <ul>
             <li><a href="#">link</a></li>
-            <li><a href="#">link</a></li>
-            <li><a href="#">link</a></li>
+            <li><a href="#"><button class="btn btn-first">Log in</button></a></li>
+            <li><a href="#"><button class="btn btn-scn">GetHubSpotFree</button></a></li>
           </ul>
         </nav>
       </section>
