--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;900&display=swap" rel="stylesheet">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Hubspot</title>
   </head>
@@ -13,13 +14,13 @@
 
         <nav class=list-top>
          <ul>
-           <li><a href="#">english</a></li>
+           <li><a href="#"><i class="fab fa-hubspot"></i>English<i class="fas fa-angle-down"></i></a></li>
            <li><a href="#">contact us</a></li>
          </ul>
         </nav>
         <nav class=list-bottom>
           <ul>
-            <li><a href="#">link</a></li>
+            <li><a href="#"><i class="fas fa-search"></i></a></li>
             <li><a href="#"><button class="btn btn-first">Log in</button></a></li>
             <li><a href="#"><button class="btn btn-scn">GetHubSpotFree</button></a></li>
           </ul>
