--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <!--header -->
-    <header class="container">
-      <section class=" head fixed">
-
+    <header class="int">
+      <section class=" head fixed container">
+        <!-- prima nav -->
         <nav class=list-top>
          <ul>
            <li><a href="#"><i class="fab fa-hubspot"></i>English<i class="fas fa-angle-down"></i></a></li>
@@ -26,7 +26,25 @@
           </ul>
         </nav>
       </section>
-      <!-- primo menù -->
+      <hr>
+      <!--/prima nav -->
+      <!-- seconda nav -->
+      <section class="container fixed bottom bottom">
+        <nav class="nav-logo">
+          <img src="img/logo.svg" alt="logo">
+        </nav>
+        <nav class="info-nav">
+          <ul>
+            <li><a href="#">Software<i class="fas fa-angle-down"></i></a></li>
+            <li><a href="#">Pricing<i class="fas fa-angle-down"></i></a></li>
+            <li><a href="#">Resources<i class="fas fa-angle-down"></i></a></li>
+            <li><a href="#">Partners<i class="fas fa-angle-down"></i></a></li>
+            <li><a href="#">About<i class="fas fa-angle-down"></i></a></li>
+          </ul>
+        </nav>
+
+      </section>
+      <!-- /seconda nav -->
 
     </header>
     <!-- /header -->
