seconda nav correzioni

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <hr>
       <!--/prima nav -->
       <!-- seconda nav -->
-      <section class="container fixed bottom bottom">
+      <section class="container fixed nav-bottom ">
         <nav class="nav-logo">
           <img src="img/logo.svg" alt="logo">
         </nav>
