--- a/index.html
+++ b/index.html
@@ -42,10 +42,20 @@
             <li><a href="#">About<i class="fas fa-angle-down"></i></a></li>
           </ul>
         </nav>
-
       </section>
       <!-- /seconda nav -->
-
+      <!-- titolo -->
+      <div class="titolo">
+        <h1 class= "container">There's a better way to <br>grow.</h1>
+        <p class="container">Marketing, sales and service that helps your business grow without compromise. <br>
+         Because "good for the business" should laso mean "good for the <br>
+        costumer"</p>
+        <div class="button-info container">
+          <button class="btn btn-trd">GetHubSpotFree</button>
+        </div>
+        <p class="container started">Get started with free tools, and upgrade as you grow</p>
+      </div>
+      <!--/ titolo -->
     </header>
     <!-- /header -->
 
