img non centrata

--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
           core. They're powerfull alone-but even betterwhen used togheter.</p>
         </div>
         <!-- /prima sezione corpo centrale -->
+        <!-- seconda sezione corpo centrale -->
+        <div class="img-book container">
+
+        </div>
+        <!--/ seconda sezione corpo centrale -->
+
 
       </section>
 
