seconda sezione corpo div destra

--- a/index.html
+++ b/index.html
@@ -71,8 +71,11 @@
         </div>
         <!-- /prima sezione corpo centrale -->
         <!-- seconda sezione corpo centrale -->
-        <div class="img-book container">
-
+        <div class="img-book container fixed">
+          <div class="learn-more">
+            <img  id="book" src="img/CRM-Illustration.svg" alt="book">
+            <button class="btn">Learn-More</button>
+          </div>
         </div>
         <!--/ seconda sezione corpo centrale -->
 
