--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
             <img  id="book" src="img/CRM-Illustration.svg" alt="book">
             <button class="btn">Learn-More</button>
           </div>
+          <div class="free-crm">
+            <h3>Free Hubspot CRM</h3>
+            <p>Everything you need to organize,track and build better relationshipwith leads and costumers.Yes it's 100% free.Forever</p>
+            <h4>POPOLAR FEATUR</h4>
+          </div>
         </div>
         <!--/ seconda sezione corpo centrale -->
 
