--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
             <h3>Free Hubspot CRM</h3>
             <p>Everything you need to organize,track and build better relationshipwith leads and costumers.Yes it's 100% free.Forever</p>
             <h4>POPOLAR FEATUR</h4>
+            <!-- <hr> -->
+            <!-- lista -->
+            <ul>
+              <li><i class="fas fa-check-circle"></i>Contact Insight</li>
+              <li><i class="fas fa-check-circle"></i>Deals</li>
+              <li><i class="fas fa-check-circle"></i>Tasks</li>
+            </ul>
+            <!-- /lista -->
           </div>
         </div>
         <!--/ seconda sezione corpo centrale -->
