--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
           </div>
         </div>
         <!--/ seconda sezione corpo centrale -->
+        <!-- terza sezione corpo centrale -->
+        <div class="boxes container fixed">
+          <div class="box">
+            <img class="pic" src="img/Marketing-Hub-Free.svg" alt="marketing">
+          </div>
+        </div>
 
 
       </section>
