--- a/index.html
+++ b/index.html
@@ -95,6 +95,16 @@
         <div class="boxes container fixed">
           <div class="box">
             <img class="pic" src="img/Marketing-Hub-Free.svg" alt="marketing">
+            <h3>Marketing Hub</h3>
+            <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing compaigns at scale.</p>
+            <hr>
+            <h4>POPOLAR FEATUR</h4>
+            <ul>
+              <li><i class="fas fa-check-circle"></i></li>
+              <li><i class="fas fa-check-circle"></i></li>
+              <li><i class="fas fa-check-circle"></i></li>
+            </ul>
+            <button class="btn">Learn More</button>
           </div>
         </div>
 
