--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
         <!--/ seconda sezione corpo centrale -->
         <!-- terza sezione corpo centrale -->
         <div class="boxes container fixed">
+          <!-- primo box -->
           <div class="box">
             <img class="pic" src="img/Marketing-Hub-Free.svg" alt="marketing">
             <h3>Marketing Hub</h3>
@@ -100,11 +101,45 @@
             <hr>
             <h4>POPOLAR FEATUR</h4>
             <ul>
-              <li><i class="fas fa-check-circle"></i></li>
-              <li><i class="fas fa-check-circle"></i></li>
-              <li><i class="fas fa-check-circle"></i></li>
+              <li><i class="fas fa-check-circle"></i>Lead Generation</li>
+              <li><i class="fas fa-check-circle"></i>Marketing Automation</li>
+              <li><i class="fas fa-check-circle"></i>Analytics</li>
             </ul>
-            <button class="btn">Learn More</button>
+            <div class="btn-learn">
+              <button class="btn">Learn More</button>
+            </div>
+          </div>
+          <!-- secondo box -->
+          <div class="box">
+            <img class="pic" src="img/Marketing-Hub-Free.svg" alt="marketing">
+            <h3>Marketing Hub</h3>
+            <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing compaigns at scale.</p>
+            <hr>
+            <h4>POPOLAR FEATUR</h4>
+            <ul>
+              <li><i class="fas fa-check-circle"></i>Lead Generation</li>
+              <li><i class="fas fa-check-circle"></i>Marketing Automation</li>
+              <li><i class="fas fa-check-circle"></i>Analytics</li>
+            </ul>
+            <div class="btn-learn">
+              <button class="btn">Learn More</button>
+            </div>
+          </div>
+          <!-- terzo box -->
+          <div class="box">
+            <img class="pic" src="img/Marketing-Hub-Free.svg" alt="marketing">
+            <h3>Marketing Hub</h3>
+            <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing compaigns at scale.</p>
+            <hr>
+            <h4>POPOLAR FEATUR</h4>
+            <ul>
+              <li><i class="fas fa-check-circle"></i>Lead Generation</li>
+              <li><i class="fas fa-check-circle"></i>Marketing Automation</li>
+              <li><i class="fas fa-check-circle"></i>Analytics</li>
+            </ul>
+            <div class="btn-learn">
+              <button class="btn">Learn More</button>
+            </div>
           </div>
         </div>
 
