fine sezione con i 3 box allineati

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <!-- terza sezione corpo centrale -->
         <div class="boxes container fixed">
           <!-- primo box -->
-          <div class="box">
+          <div class="box left">
             <img class="pic" src="img/Marketing-Hub-Free.svg" alt="marketing">
             <h3>Marketing Hub</h3>
             <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing compaigns at scale.</p>
@@ -110,7 +110,7 @@
             </div>
           </div>
           <!-- secondo box -->
-          <div class="box">
+          <div class="box middle">
             <img class="pic" src="img/Marketing-Hub-Free.svg" alt="marketing">
             <h3>Marketing Hub</h3>
             <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing compaigns at scale.</p>
@@ -126,7 +126,7 @@
             </div>
           </div>
           <!-- terzo box -->
-          <div class="box">
+          <div class="box right">
             <img class="pic" src="img/Marketing-Hub-Free.svg" alt="marketing">
             <h3>Marketing Hub</h3>
             <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing compaigns at scale.</p>
@@ -142,9 +142,8 @@
             </div>
           </div>
         </div>
-
-
       </section>
+      <!-- /terza sezione corpo centrale -->
 
     </main>
     <!-- /corpo centrale  -->
