back-ground h2 e p quarta sezione body

--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
           <div class="free-crm">
             <h3>Free Hubspot CRM</h3>
             <p>Everything you need to organize,track and build better relationshipwith leads and costumers.Yes it's 100% free.Forever</p>
-            <h4>POPOLAR FEATUR</h4>
-            <!-- <hr> -->
+            <h4 class="info-features">POPOLAR FEATUR</h4>
             <!-- lista -->
             <ul>
               <li><i class="fas fa-check-circle"></i>Contact Insight</li>
@@ -144,6 +143,13 @@
         </div>
       </section>
       <!-- /terza sezione corpo centrale -->
+      <section class="second-section">
+        <div class="blue-section container">
+          <h2>Learn and grow with award-winning support and a thriving community <br>
+          behind you. </h2>
+          <p>You don't have to go it alone. Master the inbound methodology the moust out of your tools with HubSpot's legendary costumesupport team and community of thousend of marketing and sales pros just like you.</p>
+        </div>
+      </section>
 
     </main>
     <!-- /corpo centrale  -->
