allineamento prima riga griglia

--- a/index.html
+++ b/index.html
@@ -149,6 +149,28 @@
           behind you. </h2>
           <p>You don't have to go it alone. Master the inbound methodology the moust out of your tools with HubSpot's legendary costumesupport team and community of thousend of marketing and sales pros just like you.</p>
         </div>
+        <div class="first-row container fixed">
+          <ul>
+            <li class="icon"><i class="far fa-handshake"></i></li>
+            <li class="number">150 <span class="plus">+</span> </li>
+            <li class="text">HubSpot user group</li>
+          </ul>
+          <ul>
+            <li class="icon"><i class="far fa-handshake"></i></li>
+            <li class="number">150 <span class="plus">+</span> </li>
+            <li class="text">HubSpot user group</li>
+          </ul>
+          <ul>
+            <li class="icon"><i class="far fa-handshake"></i></li>
+            <li class="number">150 <span class="plus">+</span> </li>
+            <li class="text">HubSpot user group</li>
+          </ul>
+          <ul>
+            <li class="icon"><i class="far fa-handshake"></i></li>
+            <li class="number">150 <span class="plus">+</span> </li>
+            <li class="text">HubSpot user group</li>
+          </ul>
+        </div>
       </section>
 
     </main>
