fine griglia e quarta sezione

--- a/index.html
+++ b/index.html
@@ -143,12 +143,14 @@
         </div>
       </section>
       <!-- /terza sezione corpo centrale -->
+      <!-- quarta sezione corpo centrale -->
       <section class="second-section">
         <div class="blue-section container">
           <h2>Learn and grow with award-winning support and a thriving community <br>
           behind you. </h2>
           <p>You don't have to go it alone. Master the inbound methodology the moust out of your tools with HubSpot's legendary costumesupport team and community of thousend of marketing and sales pros just like you.</p>
         </div>
+        <!-- prima riga -->
         <div class="first-row container fixed">
           <ul class="first-box">
             <li class="icon"><i class="far fa-handshake"></i></li>
@@ -171,7 +173,33 @@
             <li class="text">HubSpot user group</li>
           </ul>
         </div>
+        <!--/ prima riga -->
+        <!-- seconda riga -->
+        <div class="bottom-row container fixed">
+          <ul class="first-box">
+            <li class="icon"><i class="far fa-handshake"></i></li>
+            <li class="number">150 <span class="plus">+</span> </li>
+            <li class="text">HubSpot user group</li>
+          </ul>
+          <ul>
+            <li class="icon"><i class="far fa-handshake"></i></li>
+            <li class="number">150 <span class="plus">+</span> </li>
+            <li class="text">HubSpot user group</li>
+          </ul>
+          <ul class="third-box">
+            <li class="icon"><i class="far fa-handshake"></i></li>
+            <li class="number">150 <span class="plus">+</span> </li>
+            <li class="text">HubSpot user group</li>
+          </ul>
+          <ul>
+            <li class="icon"><i class="far fa-handshake"></i></li>
+            <li class="number">150 <span class="plus">+</span> </li>
+            <li class="text">HubSpot user group</li>
+          </ul>
+        </div>
+        <!--/seconda riga -->
       </section>
+      <!-- /quarta sezione corpo centrale -->
 
     </main>
     <!-- /corpo centrale  -->
