prima riga sponsor

--- a/index.html
+++ b/index.html
@@ -205,10 +205,18 @@
         <div class="line fixed">
           <div class="number"><span>64,500</span></div>
           <ul class="brands">
-            <li><i class="fab fa-atlassian"></i>Atlassian</li>
-            <li>ciao</li>
-            <li>ciao</li>
-            <li>ciao</li>
+            <li>
+               <img src="img/atlassian.png" alt="atlassian logo">
+            </li>
+            <li>
+               <img src="img/doordash.png" alt="doordash logo">
+            </li>
+            <li>
+               <img src="img/crowd.png" alt="crowd logo">
+            </li>
+            <li>
+               <img src="img/Vertical_Sabaeus_RGB.svgs" alt="sabaeus logo">
+            </li>
           </ul>
 
         </div>
