--- a/index.html
+++ b/index.html
@@ -212,13 +212,32 @@
                <img src="img/doordash.png" alt="doordash logo">
             </li>
             <li>
-               <img src="img/crowd.png" alt="crowd logo">
+               <img src="img/crowd.png" alt="crowd logo" >
             </li>
             <li>
-               <img src="img/Vertical_Sabaeus_RGB.svgs" alt="sabaeus logo">
+               <img src="img/Vertical_Sabaeus_RGB.svg" alt="sabaeus logo" id="sabeaus">
             </li>
           </ul>
-
+        </div>
+        <!-- /prima riga -->
+        <div class="line fixed">
+          <div class="paragraph">
+            <p>costumer in over <strong>100</strong><br> countries growing theirb <br> businesses with HubSpot</p>
+          </div>
+          <ul class="brands">
+            <li>
+               <img src="img/subaru.png" alt="subaru logo">
+            </li>
+            <li>
+               <img src="img/Wistia_logo@2x (1).webp" alt="witsia logo">
+            </li>
+            <li>
+               <img src="img/Classpass-logo@2x.webp" alt="classpass logo" >
+            </li>
+            <li>
+               <img src="img/VMware_logo_gry_RGB_300dpi@2x.webp" alt="wmare logo">
+            </li>
+          </ul>
         </div>
       </section>
       <!--/ quinta sezione corpo centrale -->
