--- a/index.html
+++ b/index.html
@@ -241,6 +241,18 @@
         </div>
       </section>
       <!--/ quinta sezione corpo centrale -->
+      <!-- sesta sezione corpo centrale -->
+      <section class="last-section container">
+        <div class="ultima-riga fixed">
+          <div class="last-title">
+
+          </div>
+          <div class="last-image">
+
+          </div>
+        </div>
+      </section>
+      <!-- /sesta sezione corpo centrale -->
 
 
     </main>
