--- a/index.html
+++ b/index.html
@@ -245,16 +245,19 @@
       <section class="last-section container">
         <div class="ultima-riga fixed">
           <div class="last-title">
-
+            <h2>Start Growing with HubSpot <br>
+            Today </h2>
+            <p class="big-p">With tools to make every partof your process more human and a <br>
+            support team excited to help you, gettingstarted with inbound has <br>
+            never been easier </p>
+            <button class="btn btn-trd">GetHubSpotFree</button>
+            <p class="small-p">Get started with free tools, or get more withour premium software</p>
           </div>
           <div class="last-image">
-
           </div>
         </div>
       </section>
       <!-- /sesta sezione corpo centrale -->
-
-
     </main>
     <!-- /corpo centrale  -->
 
