posizionamento prima lista footer

--- a/index.html
+++ b/index.html
@@ -262,7 +262,61 @@
     <!-- /corpo centrale  -->
 
     <!-- footer -->
-    <footer></footer>
+    <footer>
+      <section class="up-foot container fixed" >
+        <div class="foot-box">
+          <h4>Increase Your Traffic</h4>
+          <ul>
+            <li>ad software</li>
+            <li>blog software</li>
+            <li>SEO software</li>
+            <li>socila media software</li>
+            <li>content management system</li>
+          </ul>
+        </div>
+        <div class="foot-box">
+          <h4>Increase Your Traffic</h4>
+          <ul>
+            <li>ad software</li>
+            <li>blog software</li>
+            <li>SEO software</li>
+            <li>socila media software</li>
+            <li>content management system</li>
+          </ul>
+        </div>
+        <div class="foot-box">
+          <h4>Increase Your Traffic</h4>
+          <ul>
+            <li>ad software</li>
+            <li>blog software</li>
+            <li>SEO software</li>
+            <li>socila media software</li>
+            <li>content management system</li>
+          </ul>
+        </div>
+        <div class="foot-box">
+          <h4>Increase Your Traffic</h4>
+          <ul>
+            <li>ad software</li>
+            <li>blog software</li>
+            <li>SEO software</li>
+            <li>socila media software</li>
+            <li>free tools & generator</li>
+            <li><button class="btn last-btn">contact hubSpot support</button> </li>
+            <ul class="icon-list">
+              <li><i class="fab fa-facebook-f"></i></li>
+              <li><i class="fab fa-instagram"></i></li>
+              <li><i class="fab fa-youtube"></i></li>
+              <li><i class="fab fa-twitter"></i></li>
+              <li><i class="fab fa-linkedin-in"></i></li>
+            </ul>
+          </ul>
+        </div>
+
+
+
+      </section>
+    </footer>
     <!-- /footer -->
 
   </body>
