--- a/index.html
+++ b/index.html
@@ -312,6 +312,18 @@
             </ul>
           </ul>
         </div>
+        <div class="middle-foot">
+          <div class="languages-list">
+            <ul>
+              <li>english</li>
+              <li>deutch</li>
+              <li>日本語</li>
+              <li>espa&#241;ol</li>
+              <li>portugu&#234;s</li>
+              <li>fran&#231;ais</li>
+            </ul>
+          </div>
+        </div>
 
 
 
