--- a/index.html
+++ b/index.html
@@ -325,6 +325,17 @@
           </div>
           <hr>
         </div>
+        <nav class="last-nav fixed">
+          <div class="last-logo">
+            <img src="img/HSLogo_gray.svg" alt="logo">
+            <p>copriright 2019 hubSpot, inc.</p>
+
+          </div>
+          <div class="privacy">
+
+          </div>
+
+        </nav>
 
 
 
