--- a/index.html
+++ b/index.html
@@ -332,9 +332,11 @@
 
           </div>
           <div class="privacy">
-
+            <ul>
+              <li>legal stuff</li>
+              <li>privacy policy</li>
+            </ul>
           </div>
-
         </nav>
 
 
