prima nav header allineata

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         </nav>
         <nav class=list-bottom>
           <ul>
-            <li><a href="#"><i class="fas fa-search"></i></a></li>
-            <li><a href="#"><button class="btn btn-first">Log in</button></a></li>
-            <li><a href="#"><button class="btn btn-scn">GetHubSpotFree</button></a></li>
+            <li class="a-right"><a href="#"><i class="fas fa-search"></i></a></li>
+            <li class="a-right"><a href="#"><button class="btn btn-first">Log in</button></a></li>
+            <li class="a-right"><a href="#"><button class="btn btn-scn">GetHubSpotFree</button></a></li>
           </ul>
         </nav>
       </section>
