--- a/index.html
+++ b/index.html
@@ -275,17 +275,17 @@
           </ul>
         </div>
         <div class="foot-box">
-          <h4>Increase Your Traffic</h4>
+          <h4>connect with leads</h4>
           <ul>
-            <li>ad software</li>
-            <li>blog software</li>
-            <li>SEO software</li>
-            <li>socila media software</li>
-            <li>content management system</li>
+            <li>find new prospect</li>
+            <li>email tracking</li>
+            <li>sales emal template</li>
+            <li>click to call your leads</li>
+            <li>email marketing</li>
           </ul>
         </div>
         <div class="foot-box">
-          <h4>Increase Your Traffic</h4>
+          <h4>close and manage leads</h4>
           <ul>
             <li>ad software</li>
             <li>blog software</li>
@@ -338,12 +338,8 @@
             </ul>
           </div>
         </nav>
-
-
-
       </section>
     </footer>
     <!-- /footer -->
-
   </body>
 </html>
