--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             <li>ad software</li>
             <li>blog software</li>
             <li>SEO software</li>
-            <li>socila media software</li>
+            <li>social media software</li>
             <li>content management system</li>
           </ul>
         </div>
@@ -287,11 +287,11 @@
         <div class="foot-box">
           <h4>close and manage leads</h4>
           <ul>
-            <li>ad software</li>
-            <li>blog software</li>
-            <li>SEO software</li>
-            <li>socila media software</li>
-            <li>content management system</li>
+            <li>document tracking tool</li>
+            <li>meeting schedule tool</li>
+            <li>sales automation toll</li>
+            <li>lead management tool</li>
+            <li>pipeline management tool</li>
           </ul>
         </div>
         <div class="foot-box">
@@ -328,7 +328,7 @@
         <nav class="last-nav fixed">
           <div class="last-logo">
             <img src="img/HSLogo_gray.svg" alt="logo">
-            <p>copriright 2019 hubSpot, inc.</p>
+            <p>copriright <i class="far fa-copyright"></i> 2019 hubSpot, inc.</p>
 
           </div>
           <div class="privacy">
