--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
       <!-- /quarta sezione corpo centrale -->
       <!-- quinta sezione corpo centrale -->
       <section class="fifth-section container">
-        <div class="line fixed">
-          <div class="number"><span>64,500</span></div>
+        <!-- <div class="line fixed">
+          <div class="number-thousend container"><span>64,500</span></div>
           <ul class="brands">
             <li>
                <img src="img/atlassian.png" alt="atlassian logo">
@@ -218,7 +218,26 @@
                <img src="img/Vertical_Sabaeus_RGB.svg" alt="sabaeus logo" id="sabeaus">
             </li>
           </ul>
-        </div>
+        </div> -->
+        <div class="line fixed">
+          <div class="paragraph">
+            <span>64,500</span>
+          </div>
+          <ul class="brands">
+            <li>
+             <img src="img/atlassian.png" alt="atlassian logo">
+            </li>
+            <li>
+             <img src="img/doordash.png" alt="doordash logo">
+            </li>
+            <li>
+             <img src="img/crowd.png" alt="crowd logo" >
+            </li>
+            <li>
+             <img src="img/Vertical_Sabaeus_RGB.svg" alt="sabaeus logo" id="sabeaus">
+            </li>
+          </ul>
+
         <!-- /prima riga -->
         <div class="line fixed">
           <div class="paragraph">
@@ -226,13 +245,13 @@
           </div>
           <ul class="brands">
             <li>
-               <img src="img/subaru.png" alt="subaru logo">
+               <img src="img/subaru.png" alt="subaru logo" class="higer">
             </li>
             <li>
                <img src="img/Wistia_logo@2x (1).webp" alt="witsia logo">
             </li>
             <li>
-               <img src="img/Classpass-logo@2x.webp" alt="classpass logo" >
+               <img src="img/Classpass-logo@2x.webp" alt="classpass logo"class="higer" >
             </li>
             <li>
                <img src="img/VMware_logo_gry_RGB_300dpi@2x.webp" alt="wmare logo">
