modifica 3 box in linea

--- a/index.html
+++ b/index.html
@@ -110,15 +110,15 @@
           </div>
           <!-- secondo box -->
           <div class="box middle">
-            <img class="pic" src="img/Marketing-Hub-Free.svg" alt="marketing">
-            <h3>Marketing Hub</h3>
-            <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing compaigns at scale.</p>
+            <img class="pic" src="img/Sales-Professional-Illustration.svg" alt="marketing">
+            <h3>Sales Hub</h3>
+            <p>Time-saving sales software that helps you get deeper insight into prospect, automate the tasks you hate, and close more deals faster.</p>
             <hr>
             <h4>POPOLAR FEATUR</h4>
             <ul>
-              <li><i class="fas fa-check-circle"></i>Lead Generation</li>
-              <li><i class="fas fa-check-circle"></i>Marketing Automation</li>
-              <li><i class="fas fa-check-circle"></i>Analytics</li>
+              <li><i class="fas fa-check-circle"></i>Email Tracking</li>
+              <li><i class="fas fa-check-circle"></i>Meeting Scheduling</li>
+              <li><i class="fas fa-check-circle"></i>Email Automation</li>
             </ul>
             <div class="btn-learn">
               <button class="btn">Learn More</button>
@@ -126,15 +126,15 @@
           </div>
           <!-- terzo box -->
           <div class="box right">
-            <img class="pic" src="img/Marketing-Hub-Free.svg" alt="marketing">
-            <h3>Marketing Hub</h3>
-            <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing compaigns at scale.</p>
+            <img class="pic" src="img/Service-Hub-Illustration.svg" alt="marketing">
+            <h3>Service Hub</h3>
+            <p>Costumer service software to help you connect with costumer, exceed expectation, and turn them into promoters that grow your business.</p>
             <hr>
             <h4>POPOLAR FEATUR</h4>
             <ul>
-              <li><i class="fas fa-check-circle"></i>Lead Generation</li>
-              <li><i class="fas fa-check-circle"></i>Marketing Automation</li>
-              <li><i class="fas fa-check-circle"></i>Analytics</li>
+              <li><i class="fas fa-check-circle"></i>Tickets</li>
+              <li><i class="fas fa-check-circle"></i>Costumer Feedback</li>
+              <li><i class="fas fa-check-circle"></i>knowledge Base</li>
             </ul>
             <div class="btn-learn">
               <button class="btn">Learn More</button>
@@ -202,23 +202,6 @@
       <!-- /quarta sezione corpo centrale -->
       <!-- quinta sezione corpo centrale -->
       <section class="fifth-section container">
-        <!-- <div class="line fixed">
-          <div class="number-thousend container"><span>64,500</span></div>
-          <ul class="brands">
-            <li>
-               <img src="img/atlassian.png" alt="atlassian logo">
-            </li>
-            <li>
-               <img src="img/doordash.png" alt="doordash logo">
-            </li>
-            <li>
-               <img src="img/crowd.png" alt="crowd logo" >
-            </li>
-            <li>
-               <img src="img/Vertical_Sabaeus_RGB.svg" alt="sabaeus logo" id="sabeaus">
-            </li>
-          </ul>
-        </div> -->
         <div class="line fixed">
           <div class="paragraph">
             <span>64,500</span>
