--- a/index.html
+++ b/index.html
@@ -153,46 +153,46 @@
         <!-- prima riga -->
         <div class="first-row container fixed">
           <ul class="first-box">
-            <li class="icon"><i class="far fa-handshake"></i></li>
+            <li class="icon"> <img src="img/homepage_community_agency.svg" alt=""> </i></li>
             <li class="number">150 <span class="plus">+</span> </li>
             <li class="text">HubSpot user group</li>
           </ul>
           <ul>
-            <li class="icon"><i class="far fa-handshake"></i></li>
-            <li class="number">150 <span class="plus">+</span> </li>
-            <li class="text">HubSpot user group</li>
+            <li class="icon"><img src="img/homepage_community_blog.svg" alt=""></i></li>
+            <li class="number">4.5M <span class="plus">+</span> </li>
+            <li class="text">Monthly visits</li>
           </ul>
           <ul class="third-box">
-            <li class="icon"><i class="far fa-handshake"></i></li>
-            <li class="number">150 <span class="plus">+</span> </li>
-            <li class="text">HubSpot user group</li>
+            <li class="icon"><img src="img/homepage_community_academy.svg" alt=""></i></li>
+            <li class="number">155k<span class="plus">+</span> </li>
+            <li class="text">Certfied professionals</li>
           </ul>
           <ul>
-            <li class="icon"><i class="far fa-handshake"></i></li>
-            <li class="number">150 <span class="plus">+</span> </li>
-            <li class="text">HubSpot user group</li>
+            <li class="icon"><img src="img/homepage_community_inbound.svg" alt=""></i></li>
+            <li class="number">21k <span class="plus">+</span> </li>
+            <li class="text">Registered attendees</li>
           </ul>
         </div>
         <!--/ prima riga -->
         <!-- seconda riga -->
         <div class="bottom-row container fixed">
           <ul class="first-box">
-            <li class="icon"><i class="far fa-handshake"></i></li>
+            <li class="icon"><img src="img/HubSpot-App-Marketplace-White.webp" alt=""></i></li>
             <li class="number">150 <span class="plus">+</span> </li>
             <li class="text">HubSpot user group</li>
           </ul>
           <ul>
-            <li class="icon"><i class="far fa-handshake"></i></li>
+            <li class="icon"><img src="img/homepage_community_globe.svg" alt=""></i></li>
             <li class="number">150 <span class="plus">+</span> </li>
             <li class="text">HubSpot user group</li>
           </ul>
           <ul class="third-box">
-            <li class="icon"><i class="far fa-handshake"></i></li>
+            <li class="icon"><img src="img/homepage_community_followers.svg" alt=""></i></li>
             <li class="number">150 <span class="plus">+</span> </li>
             <li class="text">HubSpot user group</li>
           </ul>
           <ul>
-            <li class="icon"><i class="far fa-handshake"></i></li>
+            <li class="icon"><img src="img/Lists.svg" alt=""></i></li>
             <li class="number">150 <span class="plus">+</span> </li>
             <li class="text">HubSpot user group</li>
           </ul>
