cambio size img e numeri griglia

--- a/index.html
+++ b/index.html
@@ -153,23 +153,23 @@
         <!-- prima riga -->
         <div class="first-row container fixed">
           <ul class="first-box">
-            <li class="icon"> <img src="img/homepage_community_agency.svg" alt=""> </i></li>
-            <li class="number">150 <span class="plus">+</span> </li>
+            <li class="icon"> <img class="special"src="img/homepage_community_agency.svg" alt=""> </i></li>
+            <li class="number">150<span class="plus">+</span> </li>
             <li class="text">HubSpot user group</li>
           </ul>
           <ul>
             <li class="icon"><img src="img/homepage_community_blog.svg" alt=""></i></li>
-            <li class="number">4.5M <span class="plus">+</span> </li>
+            <li class="number">4.5M<span class="plus">+</span> </li>
             <li class="text">Monthly visits</li>
           </ul>
           <ul class="third-box">
-            <li class="icon"><img src="img/homepage_community_academy.svg" alt=""></i></li>
+            <li class="icon"><img  class="accademy" src="img/homepage_community_academy.svg" alt=""></i></li>
             <li class="number">155k<span class="plus">+</span> </li>
             <li class="text">Certfied professionals</li>
           </ul>
           <ul>
             <li class="icon"><img src="img/homepage_community_inbound.svg" alt=""></i></li>
-            <li class="number">21k <span class="plus">+</span> </li>
+            <li class="number">21k<span class="plus">+</span> </li>
             <li class="text">Registered attendees</li>
           </ul>
         </div>
@@ -177,23 +177,23 @@
         <!-- seconda riga -->
         <div class="bottom-row container fixed">
           <ul class="first-box">
-            <li class="icon"><img src="img/HubSpot-App-Marketplace-White.webp" alt=""></i></li>
-            <li class="number">150 <span class="plus">+</span> </li>
+            <li class="icon"><img class="marketing" src="img/HubSpot-App-Marketplace-White.webp" alt=""></i></li>
+            <li class="number">200<span class="plus">+</span> </li>
             <li class="text">HubSpot user group</li>
           </ul>
           <ul>
-            <li class="icon"><img src="img/homepage_community_globe.svg" alt=""></i></li>
-            <li class="number">150 <span class="plus">+</span> </li>
+            <li class="icon"><img class="special" src="img/homepage_community_globe.svg" alt=""></i></li>
+            <li class="number">6<span class="plus">+</span> </li>
             <li class="text">HubSpot user group</li>
           </ul>
           <ul class="third-box">
-            <li class="icon"><img src="img/homepage_community_followers.svg" alt=""></i></li>
-            <li class="number">150 <span class="plus">+</span> </li>
+            <li class="icon"><img class="special" src="img/homepage_community_followers.svg" alt=""></i></li>
+            <li class="number">2.6M<span class="plus">+</span> </li>
             <li class="text">HubSpot user group</li>
           </ul>
           <ul>
-            <li class="icon"><img src="img/Lists.svg" alt=""></i></li>
-            <li class="number">150 <span class="plus">+</span> </li>
+            <li class="icon"><img class="special" src="img/Lists.svg" alt=""></i></li>
+            <li class="number">5K<span class="plus">+</span> </li>
             <li class="text">HubSpot user group</li>
           </ul>
         </div>
@@ -203,7 +203,7 @@
       <!-- quinta sezione corpo centrale -->
       <section class="fifth-section container">
         <div class="line fixed">
-          <div class="paragraph">
+          <div class="paragraph container">
             <span>64,500</span>
           </div>
           <ul class="brands">
