button ===> a icona languages cambiata

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <!-- prima nav -->
         <nav class=list-top>
          <ul>
-           <li><a href="#"><i class="fab fa-hubspot"></i>English<i class="fas fa-angle-down"></i></a></li>
+           <li><a href="#"><i class="fas fa-globe-europe"></i></i>English <i class="fas fa-angle-down"></i></a></li>
            <li><a href="#">contact us</a></li>
          </ul>
         </nav>
         <nav class=list-bottom>
           <ul>
             <li class="a-right"><a href="#"><i class="fas fa-search"></i></a></li>
-            <li class="a-right"><a href="#"><button class="btn btn-first">Log in</button></a></li>
-            <li class="a-right"><a href="#"><button class="btn btn-scn">GetHubSpotFree</button></a></li>
+            <li class="a-right"><a class="btn btn-first" href="#">Log in</a></li>
+            <li class="a-right"><a class="btn btn-scn" href="#">GetHubSpotFree</a></li>
           </ul>
         </nav>
       </section>
@@ -35,11 +35,11 @@
         </nav>
         <nav class="info-nav">
           <ul>
-            <li><a href="#">Software<i class="fas fa-angle-down"></i></a></li>
-            <li><a href="#">Pricing<i class="fas fa-angle-down"></i></a></li>
-            <li><a href="#">Resources<i class="fas fa-angle-down"></i></a></li>
-            <li><a href="#">Partners<i class="fas fa-angle-down"></i></a></li>
-            <li><a href="#">About<i class="fas fa-angle-down"></i></a></li>
+            <li><a href="#">Software <i class="fas fa-angle-down"></i></a></li>
+            <li><a href="#">Pricing <i class="fas fa-angle-down"></i></a></li>
+            <li><a href="#">Resources <i class="fas fa-angle-down"></i></a></li>
+            <li><a href="#">Partners <i class="fas fa-angle-down"></i></a></li>
+            <li><a href="#">About <i class="fas fa-angle-down"></i></a></li>
           </ul>
         </nav>
       </section>
@@ -51,7 +51,7 @@
          Because "good for the business" should laso mean "good for the <br>
         costumer"</p>
         <div class="button-info container">
-          <button class="btn btn-trd">GetHubSpotFree</button>
+          <a class="btn btn-trd" href="#">GetHubSpotFree</a>
         </div>
         <p class="container started">Get started with free tools, and upgrade as you grow</p>
       </div>
@@ -74,7 +74,7 @@
         <div class="img-book container fixed">
           <div class="learn-more">
             <img  id="book" src="img/CRM-Illustration.svg" alt="book">
-            <button class="btn">Learn-More</button>
+            <a class="btn" href="#">Learn-More</a>
           </div>
           <div class="free-crm">
             <h3>Free Hubspot CRM</h3>
@@ -105,7 +105,7 @@
               <li><i class="fas fa-check-circle"></i>Analytics</li>
             </ul>
             <div class="btn-learn">
-              <button class="btn">Learn More</button>
+              <a class="btn" href="#">Learn More</a>
             </div>
           </div>
           <!-- secondo box -->
@@ -121,7 +121,7 @@
               <li><i class="fas fa-check-circle"></i>Email Automation</li>
             </ul>
             <div class="btn-learn">
-              <button class="btn">Learn More</button>
+              <a class="btn" href="#">Learn More</a>
             </div>
           </div>
           <!-- terzo box -->
@@ -137,7 +137,7 @@
               <li><i class="fas fa-check-circle"></i>knowledge Base</li>
             </ul>
             <div class="btn-learn">
-              <button class="btn">Learn More</button>
+              <a class="btn" href="#">Learn More</a>
             </div>
           </div>
         </div>
@@ -252,7 +252,7 @@
             <p class="big-p">With tools to make every partof your process more human and a <br>
             support team excited to help you, gettingstarted with inbound has <br>
             never been easier </p>
-            <button class="btn btn-trd">GetHubSpotFree</button>
+            <a class="btn btn-trd" href="#">GetHubSpotFree</a>
             <p class="small-p">Get started with free tools, or get more withour premium software</p>
           </div>
           <div class="last-image">
@@ -304,7 +304,7 @@
             <li>SEO software</li>
             <li>socila media software</li>
             <li>free tools & generator</li>
-            <li><button class="btn last-btn">contact hubSpot support</button> </li>
+            <li><a class="btn last-btn" href="#">contact hubSpot support</a> </li>
             <ul class="icon-list">
               <li><i class="fab fa-facebook-f"></i></li>
               <li><i class="fab fa-instagram"></i></li>
